PAE-185 - Fixed scheduler text overlapping.

--- a/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/scheduler/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.TaskScheduler/TaskScheduler.Web/src/components/scheduler/style.less
@@ -129,6 +129,8 @@
                 }
                 .schedule-item {
                     color: @thunder;
+                    word-break: keep-all;
+                    word-wrap: break-word;
                 }
             }
         }
